:recycle: 修复授权服务器配置并添加相关依赖
Signed-off-by: Yujie Wu <coffee377@dingtalk.com>